General line finished

--- a/slides.tex
+++ b/slides.tex
@@ -89,6 +89,12 @@
 	\end{property}
 \end{frame}
 
+\begin{frame}{Key Properties}
+\begin{figure}
+\includegraphics[width = 8cm]{pro.png}
+\end{figure}
+\end{frame}
+
 \section{Definations}
 \begin{frame}{Definations}
 \begin{defination}[\textsc{Road Network}]
@@ -236,7 +242,7 @@ A trajectory $Y \in{} \Upsilon{}_{v_d}$ is $v_d$-dominant if there exists no $Y'
 \end{frame}
 
 \begin{frame}{Containment-Based Footmark Index}
-	For each query $(v_i, T)$, CFMI returns two sets:
+	For each query $(v_i, T)$, CFMI-Search returns two sets:
 		\begin{enumerate}
 		\item $TRREC =\{(tid, t_s , did, sloc)\}$, which records the information of trajectories in $\Upsilon{}(v_d ,T )$
 		\item $DOM = \{(did, len)\}$, which records the did’s appeared in TRREC and their corresponding values in $v_i - Dom$ 
