--- a/Venti/main.tex
+++ b/Venti/main.tex
@@ -15,6 +15,7 @@
 \usepackage{fontspec}
 \usepackage{xunicode}
 \usepackage{xltxtra}
+\usepackage{longtable}
 
 \usepackage{amsmath,amssymb}
 
@@ -53,6 +54,22 @@
 }
 
 \include{pre}
+
+\AtBeginSection{}
+
+\section[Q\&{}A]{}
+\begin{frame}{Q\&{}A}
+\begin{center}
+  \color{blue}\huge{Any Questions?}
+\end{center}
+\end{frame}
+
+\section[End]{}
+\begin{frame}{End}
+\begin{center}
+  \color{blue}\huge{Thanks For Attention!}
+\end{center}
+\end{frame}
 
 \end{document}
 
