--- a/Venti/main.tex
+++ b/Venti/main.tex
@@ -25,7 +25,7 @@
 \setbeamercovered{transparent}
 %\logo{\includegraphics[height=1.58cm]{./logo.jpg}}
 
-\title[Venti]{Venti: a new approach to archival storage\thanks{powered by \XeLaTeX}}
+\title[Venti]{Venti: a new approach to archival storage\thanks{powered by pandoc and \XeLaTeX}}
 
 \author{Presented By: 陈子旸}
 \institute[FDU]
