--- a/HPPTE/main.tex
+++ b/HPPTE/main.tex
@@ -16,7 +16,6 @@
 \usepackage{xunicode}
 \usepackage{xltxtra}
 \usepackage{longtable}
-
 \usepackage{amsmath,amssymb}
 
 %\usepackage{syntonly}
@@ -25,16 +24,11 @@
 \setbeamercovered{transparent}
 %\logo{\includegraphics[height=1.58cm]{./logo.jpg}}
 
-\title[HPPTE]{Hourly Pedestrian Population Trends Estimation using Location Data from Smartphones
-Dealing with Temporal and Spatial Sparsity \thanks{powered by pandoc and \XeLaTeX}}
+\title[HPPTE]{\large{Hourly Pedestrian Population Trends Estimation using Location Data from Smartphones
+Dealing with Temporal and Spatial Sparsity} \thanks{Powered by pandoc and \XeLaTeX, Presented by Ziyang Chen.}}
 
-\author{Presented By: Ziyang Chen}
-\institute[FDU]
-{
-	Fudan University\\
-	\medskip
-	\textit{13307130148@fudan.edu.cn}
-}
+\author[Kentaro, Kota, Masamichi]{\footnotesize{Kentaro Nishi\inst{1} \and Kota Tsubouchi\inst{2} \and Masamichi Shimosaka\inst{1}}}
+\institute{\inst{1} the University of Tokyo \and \inst{2}  Yahoo Japan Corporation}
 \date{\today}
 
 \begin{document}
