--- a/HPPTE/pre.tex
+++ b/HPPTE/pre.tex
@@ -182,3 +182,227 @@ Table: Examples of the location data
 \end{itemize}
 
 \end{frame}
+
+\begin{frame}{Realizing time-continuous estimation}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Use Poisson distribution to represent counting data
+  \[p(m|\lambda) = \frac{1}{m!}\lambda^{m}e^{-\lambda}\]
+\item
+  Consider \(\lambda\) as a function of time \(\lambda(t)\)
+  \[p(m|\lambda(\cdot)) =  \frac{1}{m!}E[m]^{m}e^{-E[m]}\]
+  \[E[m] = \int_{t_1}^{t_2}\lambda(t)\mathrm{d}t\]
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Realizing time-continuous estimation}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Decomposed \(\lambda(t)\) into \(f(t)\) and \(\lambda_0\)
+  \[\lambda_0 = \int_0^T \lambda(t) \mathrm{d} t\;\;\;\;\; \lambda(t) = \lambda_0 f(t) \;\;\;\; \int_0^T f(t) \mathrm{d}t = 1\]
+\item
+  \(f(t)\) is estimated using Gaussian kernel density estimation
+  \[f(t) = \frac{1}{h_t n} \sum_{i=1}^n k(\frac{t-t_i}{h_t})\;\;\;\;\;k(t) = \frac{1}{ \sqrt{2\pi} }e^{-\frac{1}{2}t^2}\]
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Realizing time-continuous estimation}
+
+\begin{figure}
+\includegraphics[width = 8cm]{pic7.png}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Dealing with data sparsity in space}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Data's weight \(w_i = 1\) if the data are in the target area
+\item
+  If the data are near the target area
+  \[w_i = \frac{1}{ \sqrt{2\pi} }e^{-\frac{1}{2}(d/h_d)^2}\]
+\item
+  d is distance between data point and target area centroid
+\item
+  \(f(t)\) changed into
+  \[f(t) = \frac{1}{h_t\sum w_i}\sum_{i=1}^{n}w_i k(\frac{t-t_i}{h_t})\]
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Parameter selection}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Traffic censuses using tally counters were conducted for this
+  research.
+\item
+  The parameters to be determined are \(K\), means how many pedestrians
+  are represented by a single data point.
+  \[\hat{K_p}=\frac{M_p}{(\sum_{i=1}^n w_i)(\int_{t_1}^{t_2}f(t)\mathrm{d}t)}\]
+\item
+  \(t_1\) and \(t_2\) are the census start and end times
+\item
+  \(M_p\) is total pedestrian number according to traffic census data of
+  the day.
+\end{itemize}
+
+\end{frame}
+
+\section{Experiment}\label{experiment}
+
+\subsection{Reference data}\label{reference-data}
+
+\begin{frame}{Reference data}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Traffic censuses using tally counters were conducted in five areas on
+  11 days in Japan in September 2013
+
+  \begin{figure}
+  \includegraphics[height = 4cm]{pic8.png}
+  \includegraphics[height = 4cm]{pic9.png}
+  \end{figure}
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Reference data}
+
+\begin{figure}
+\includegraphics[width = 10cm]{pic10.png}\\
+Table: Date and time of traffic census using tally counters.\\
+All censuses were conducted in 2013.
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Reference data}
+
+\begin{figure}
+\includegraphics[width = 9cm]{pic11.png}\\
+Reference data manually obtained by \\
+traffic census using tally counters
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Reference data}
+
+\begin{figure}
+\includegraphics[width = 9cm]{pic12.png}\\
+Reference data manually obtained by \\
+traffic census using tally counters
+\end{figure}
+
+\end{frame}
+
+\subsection{Evaluation metrics}\label{evaluation-metrics}
+
+\begin{frame}{Evaluation metrics}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Mean squared error of hourly estimation
+  \[metric\; 1 = \frac{1}{t_2-t_1}\sum_{t=t_1}^{t_2-1}(\hat{m_t}-m_t)^2\]
+\item
+  Absolute error of peak time
+  \[metric\; 2 = |arg_t\, max(\hat{m_t}) - arg_t\, max(m_t)|\]
+\item
+  Absolute error of daily total number
+  \[metric\; 3 = |\sum_{t=t_1}^{t_2}\hat{m_t}-\sum_{t=t_1}^{t_2}m_t|\]
+\end{enumerate}
+
+\end{frame}
+
+\subsection{Comparative approach}\label{comparative-approach}
+
+\begin{frame}{Comparative approach}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  \textbf{Approach 1} is the simple approach. This is a method for
+  counting the number of location data in a target area and hour and
+  multiplying K.
+\item
+  \textbf{Approach 2} is almost the same as the proposed approach using
+  time continuous method and data supplement using a spatial kernel
+  approach, but a data elimination step is not applied.
+\end{itemize}
+
+\end{frame}
+
+\subsection{Result}\label{result}
+
+\begin{frame}{Result}
+
+\begin{figure}
+\includegraphics[width = 9cm]{pic13.png}\\
+\includegraphics[width = 9cm]{pic14.png}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Result}
+
+\begin{figure}
+\includegraphics[width = 9cm]{pic15.png}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}{Result}
+
+\begin{figure}
+\includegraphics[width = 9cm]{pic16.png}
+\end{figure}
+
+\end{frame}
+
+\section{Conclusion}\label{conclusion}
+
+\begin{frame}{Conclusion}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Location data from smartphone applications were studied for monitoring
+  the number of pedestrians.
+\item
+  Intended to be an alternative to traffic censuses using tally
+  counters.
+\item
+  Has advantages in the cost and flexibility compared to manual censuses
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Conclusion}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Assume that the number of location data in an area is proportional to
+  the population volume
+\item
+  To estimate numbers of only pedestrians
+\item
+  Deals with temporal and spatial sparsity of data by introducing
+  non-homogeneous Poisson processes and Gaussian kernels.
+\end{itemize}
+
+\end{frame}
